--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   },
   "dependencies": {
     "expo": "~42.0.1",
+    "expo-constants": "^11.0.1",
+    "expo-notifications": "^0.12.3",
     "expo-status-bar": "~1.0.4",
+    "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-button": "^3.0.1",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
