--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "expo": "~42.0.1",
     "expo-constants": "^11.0.1",
+    "expo-google-app-auth": "^8.2.2",
     "expo-notifications": "^0.12.3",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
@@ -17,8 +18,10 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-button": "^3.0.1",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
